# github-etl

./: .dockerignore  Dockerfile  Dockerfile.mock  README.md  TESTING.md  data.yml  docker-compose.yml  main.py  mock_github_api.py  pyproject.toml  pytest.ini  requirements.txt  test_formatting.py  test_main.py
.github/workflows/: deploy.yml  tests.yml
tests/: conftest.py  test_extract_comments.py  test_extract_commits.py  test_extract_pull_requests.py  test_extract_reviewers.py  test_formatting.py  test_jwt.py  test_load_data.py  test_logging.py  test_main.py  test_main_integration.py  test_rate_limit.py  test_transform_data.py
